# shapefusion

./: BigEndianBuffer.cpp  BigEndianBuffer.h  BitmapBrowser.cpp  BitmapBrowser.h  BitmapView.cpp  DefaultNames.cpp  DefaultNames.h  FrameBrowser.cpp  FrameBrowser.h  FrameView.cpp  FrameView.h  GenericEndianBuffer.cpp  GenericEndianBuffer.h  LittleEndianBuffer.cpp  Makefile  Makefile.am  Makefile.win32  README.txt  SequenceView.h  ShapeFusion-Info.plist  ShapeFusionApp.cpp  ShapeFusionApp.h  ShapeFusionDocManager.cpp  ShapeFusionMain.cpp  ShapeFusionMain.h  ShapeFusionMenus.cpp  ShapeFusionMenus.h  Shapes.h  ShapesEditor.cpp  ShapesEditor.h  autogen.sh  configure.ac  utilities.h
Physics/: DefaultPhysics.cpp  DefaultPhysics.h  Makefile.am  PhysicsDocument.cpp  PhysicsDocument.h  PhysicsEditor.cpp  PhysicsElements.cpp  PhysicsElements.h  PhysicsTreeItemData.cpp  PhysicsTreeItemData.h  PhysicsView.cpp  PhysicsView.h
Resources/: shapefusion.icns  shapefusion.rc
ShapeFusion.xcodeproj/: project.pbxproj
Shapes/: BitmapBrowser.cpp  BitmapBrowser.h  BitmapView.cpp  BitmapView.h  CTBrowser.cpp  CTView.cpp  CTView.h  FrameBrowser.cpp  FrameBrowser.h  FrameView.cpp  FrameView.h  Makefile  Makefile.am  SequenceView.cpp  SequenceView.h  ShapesDocument.cpp  ShapesDocument.h  ShapesEditor.h  ShapesElements.cpp  ShapesElements.h  ShapesTreeItemData.cpp  ShapesTreeItemData.h  ShapesView.cpp  ShapesView.h  utilities.cpp  utilities.h
Sounds/: SoundsDocument.cpp  SoundsDocument.h  SoundsElements.cpp  SoundsElements.h  SoundsView.cpp  SoundsView.h
VisualStudio/: .gitignore  ShapesFusion.sln  ShapesFusion.vcxproj  ShapesFusion.vcxproj.filters  vcpkg.json
branches/shapefusion-0.3/: BitmapBrowser.h  CTBrowser.h  FrameView.cpp  README.txt  SequenceView.cpp  Shapes.cpp  Shapes.h  ShapesEditor.cpp
branches/shapefusion-0.3/ShapeFusion.xcodeproj/: project.pbxproj
branches/wxDoc-branch/: FrameBrowser.cpp  Makefile  ShapeFusionApp.cpp  ShapeFusionLists.cpp  ShapeFusionLists.h  ShapeFusionMain.cpp  ShapeFusionMain.h  ShapeFusionMenus.cpp  ShapeFusionMenus.h  ShapesDocument.cpp  ShapesDocument.h  ShapesEditor.cpp  ShapesView.cpp  ShapesView.h  utilities.cpp  utilities.h
branches/wxDoc-branch/ShapeFusion.xcodeproj/: project.pbxproj
branches/wxDoc-branch/Shapes/: BitmapBrowser.cpp  BitmapBrowser.h  BitmapView.cpp  BitmapView.h  CTBrowser.cpp  CTBrowser.h  FrameBrowser.cpp  FrameBrowser.h  FrameView.cpp  FrameView.h  MyTreeItemData.h  SequenceView.cpp  SequenceView.h  ShapesDocument.cpp  ShapesDocument.h  ShapesEditor.cpp  ShapesEditor.h  ShapesElement.cpp  ShapesElements.cpp  ShapesElements.h  ShapesLoaders.cpp  ShapesLoaders.h  ShapesView.cpp  ShapesView.h
branches/wxDoc-branch/Shapes/Files/: ShapesBitmap.cpp  ShapesBitmap.h  ShapesChunk.cpp  ShapesChunk.h  ShapesCollection.cpp  ShapesCollection.h  ShapesColor.cpp  ShapesColor.h  ShapesColorTable.cpp  ShapesColorTable.h  ShapesElement.cpp  ShapesElement.h  ShapesFrame.cpp  ShapesFrame.h  ShapesSequence.cpp  ShapesSequence.h
branches/wxDoc-branch/osx-build/ShapeFusion/: ShapeFusion-Info.plist
branches/wxDoc-branch/osx-build/ShapeFusion/ShapeFusion.xcodeproj/: project.pbxproj
tags/shapefusion-0.3/: BigEndianBuffer.cpp  CTBrowser.cpp  MyTreeItemData.h  ShapeFusion-Info.plist  ShapeFusionApp.cpp  Shapes.cpp  ShapesEditor.h
tags/shapefusion-0.3/ShapeFusion.xcodeproj/: project.pbxproj
tags/shapefusion-0.4/: BigEndianBuffer.cpp  BigEndianBuffer.h  LittleEndianBuffer.cpp  Makefile  README.txt  ShapeFusionApp.cpp  ShapeFusionMenus.h
tags/shapefusion-0.4/ShapeFusion.xcodeproj/: project.pbxproj
tags/shapefusion-0.4/Shapes/: BitmapView.h  CTBrowser.cpp  CTView.cpp  CTView.h  FrameBrowser.cpp  SequenceView.cpp  ShapesDocument.h  ShapesView.cpp  ShapesView.h  utilities.cpp  utilities.h
tags/shapefusion-0.4/Sounds/: SoundsDocument.cpp  SoundsDocument.h  SoundsElements.cpp  SoundsView.h
tags/shapefusion-0.5/: GenericEndianBuffer.cpp  LittleEndianBuffer.h  ShapeFusionMain.cpp  ShapeFusionMenus.cpp
tags/shapefusion-0.5/Shapes/: BitmapView.cpp  CTBrowser.cpp  CTBrowser.h  FrameBrowser.h  FrameView.cpp  FrameView.h  SequenceView.cpp  ShapesDocument.h  ShapesElements.cpp  ShapesElements.h  ShapesView.cpp  ShapesView.h
tags/shapefusion-0.5/Sounds/: SoundsDocument.h  SoundsElements.cpp  SoundsElements.h  SoundsView.h
trunk/: BigEndianBuffer.cpp  DefaultNames.cpp  DefaultNames.txt  FrameBrowser.h  GenericEndianBuffer.cpp  GenericEndianBuffer.h  LittleEndianBuffer.h  Makefile  Makefile.am  Makefile.win32  MyTreeItemData.cpp  README.txt  SequenceView.h  ShapeFusion-Info.plist  ShapeFusionApp.cpp  ShapeFusionApp.h  ShapeFusionDocManager.h  ShapeFusionMain.cpp  ShapeFusionMenus.cpp  Shapes.cpp  ShapesEditor.cpp  utilities.cpp
trunk/Physics/: Makefile.am  PhysicsEditor.cpp  PhysicsElements.cpp  PhysicsElements.h  PhysicsView.cpp  PhysicsView.h
trunk/Resources/: shapefusion.rc
trunk/ShapeFusion.xcodeproj/: project.pbxproj
trunk/Shapes/: BitmapBrowser.cpp  BitmapBrowser.h  BitmapView.h  CTBrowser.cpp  CTBrowser.h  CTView.cpp  CTView.h  FrameBrowser.cpp  FrameView.cpp  FrameView.h  Makefile  Makefile.am  SequenceView.cpp  SequenceView.h  ShapesDocument.cpp  ShapesDocument.h  ShapesEditor.cpp  ShapesElements.cpp  ShapesElements.h  ShapesTreeItemData.h  ShapesView.cpp  ShapesView.h  utilities.cpp
trunk/Sounds/: Makefile  Makefile.am  SoundsDocument.cpp  SoundsDocument.h  SoundsElements.cpp  SoundsElements.h  SoundsView.cpp  SoundsView.h
trunk/osx-build/ShapeFusion/: ShapeFusion.plist
trunk/osx-build/ShapeFusion/ShapeFusion.xcodeproj/: project.pbxproj
vcpkg/: install-arm64-osx.sh  install-x64-osx.sh
vcpkg/custom-ports/wxwidgets/: install-layout.patch  nanosvg-ext-depend.patch  portfile.cmake  sdl2.patch  vcpkg.json
