## Process this file with automake to produce Makefile.in 

noinst_LIBRARIES = libphysics.a

libphysics_a_SOURCES = DefaultPhysics.h PhysicsDocument.h PhysicsElements.h	\
	PhysicsTreeItemData.h PhysicsView.h DefaultPhysics.cpp PhysicsDocument.cpp	\
	PhysicsEditor.cpp PhysicsElements.cpp PhysicsView.cpp	\
	PhysicsTreeItemData.cpp
