## Process this file with automake to produce Makefile.in 

noinst_LIBRARIES = libshapes.a

libshapes_a_SOURCES = BitmapBrowser.cpp BitmapView.cpp CTBrowser.cpp CTView.cpp \
				FrameBrowser.cpp FrameView.cpp SequenceView.cpp \
				ShapesDocument.cpp ShapesElements.cpp ShapesView.cpp \
				ShapesTreeItemData.cpp utilities.cpp
