## Process this file with automake to produce Makefile.in 

noinst_LIBRARIES = libshapes.a

libshapes_a_SOURCES = BitmapBrowser.h BitmapView.h CTBrowser.h		\
	CTView.h FrameBrowser.h FrameView.h SequenceView.h		\
	ShapesDocument.h ShapesElements.h ShapesTreeItemData.h		\
	ShapesView.h utilities.h BitmapBrowser.cpp BitmapView.cpp	\
	CTBrowser.cpp CTView.cpp FrameBrowser.cpp FrameView.cpp		\
	SequenceView.cpp ShapesDocument.cpp ShapesElements.cpp		\
	ShapesView.cpp ShapesTreeItemData.cpp utilities.cpp
